// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli() should apply baseAttrs 1`] = `
"# test

## test1

image-salt-1

<p><img src=\\"https://localhost:3000/path/to/image1.jpg\\" alt=\\"image1\\" provider=\\"imgix\\" class=\\"light-img\\"></p>

## test2

image-salt-2

![image2](https://localhost:3001/path/to/image2.jpg)
"
`;

exports[`cli() should keep baseURL 1`] = `
"# test

## test1

image-salt-1

<p><img src=\\"https://localhost:3000/path/to/image1.jpg\\" alt=\\"image1\\"></p>

## test2

image-salt-2

![image2](https://localhost:3001/path/to/image2.jpg)
"
`;

exports[`cli() should return stderr with exitcode=1 1`] = `
"Error: extractAttrs: invalid attrs has injected
"
`;

exports[`cli() should return stdout with exitcode=0 1`] = `
"# test

## test1

image-salt-1

<p><img src=\\"/path/to/image1.jpg\\" alt=\\"image1\\"></p>

## test2

image-salt-2

<p><img src=\\"/path/to/image2.jpg\\" alt=\\"image2\\"></p>
"
`;

exports[`cli() should skip url was not matched baseURL 1`] = `
"# test

## test1

image-salt-1

<p><img src=\\"/path/to/image1.jpg\\" alt=\\"image1\\"></p>

## test2

image-salt-2

![image2](https://localhost:3001/path/to/image2.jpg)
"
`;
